--- a/package.json
+++ b/package.json
@@ -10,19 +10,23 @@
   },
   "dependencies": {
     "@headlessui/react": "^1.7.14",
-    "@heroicons/react": "^2.0.17",
-    "eslint": "8.38.0",
-    "eslint-config-next": "13.3.0",
-    "firebase": "^9.19.1",
-    "next": "13.3.0",
+    "@heroicons/react": "^2.0.18",
+    "eslint": "8.40.0",
+    "eslint-config-next": "13.4.2",
+    "firebase": "^9.22.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.4",
+    "moment": "^2.29.4",
+    "next": "13.4.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-select": "^5.7.2"
+    "react-modal": "^3.16.1",
+    "react-select": "^5.7.3"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
-    "prettier": "2.8.7",
-    "tailwindcss": "^3.3.1"
+    "postcss": "^8.4.23",
+    "prettier": "2.8.8",
+    "tailwindcss": "^3.3.2"
   }
 }
